infrastructure/configs/networking/default-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: >-
        chat.internal.vw-ops.net,
        localai.internal.vw-ops.net,
        kuma.internal.vw-ops.net,
        jellytwo.internal.vw-ops.net,
        whoami.internal.vw-ops.net,
        grafana.internal.vw-ops.net,
        connect.internal.vw-ops.net
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https-wildcard
    protocol: HTTPS
    port: 443
    hostname: "*.internal.vw-ops.net"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: wildcard-tls-vw-internal
    allowedRoutes:
      namespaces:
        from: All
  - name: https-bare
    protocol: HTTPS
    port: 443
    hostname: "internal.vw-ops.net"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: wildcard-tls-vw-internal
    allowedRoutes:
      namespaces:
        from: All
